projects/web/infra/web-one.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-one-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-one
  template:
    metadata:
      labels:
        app: web-one
    spec:
      containers:
        - name: web-one
          image: onesmus/web-one
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-one-srv
spec:
  selector:
    app: web-one
  ports:
    - port: 3000
      targetPort: 3000
